--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "description": "",
   "main": "dist/index.js",
   "author": "",
-  "license": "Apache 2.0"
+  "license": "Apache 2.0",
+  "dependencies": {
+    "lodash": "^2.4.1",
+    "react": "^0.11.2",
+    "sifter": "^0.3.4"
+  }
 }
