--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
     "lodash": "^2.4.1",
     "react": "^0.11.2",
     "sifter": "^0.3.4"
+  },
+  "devDependencies": {
+    "browserify": "^6.2.0",
+    "gulp": "^3.8.9",
+    "gulp-react": "^2.0.0",
+    "gulp-watch": "^1.1.0",
+    "react-tools": "^0.11.2",
+    "reactify": "^0.14.1",
+    "watchify": "^2.1.0"
   }
 }
