--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "devDependencies": {
     "browserify": "^6.2.0",
     "gulp": "^3.8.9",
+    "gulp-connect": "^2.0.6",
     "gulp-react": "^2.0.0",
+    "gulp-render": "0.0.4",
+    "gulp-sass": "^1.2.2",
+    "gulp-sourcemaps": "^1.2.4",
     "gulp-watch": "^1.1.0",
     "react-tools": "^0.11.2",
     "reactify": "^0.14.1",
