--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "sifter": "^0.3.4"
   },
   "devDependencies": {
+    "brfs": "^1.2.0",
     "browserify": "^6.2.0",
     "gulp": "^3.8.9",
     "gulp-connect": "^2.0.6",
+    "gulp-duration": "0.0.0",
+    "gulp-notify": "^2.0.0",
     "gulp-react": "^2.0.0",
     "gulp-render": "0.1.1",
     "gulp-sass": "^1.2.2",
