--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.8.9",
     "gulp-connect": "^2.0.6",
     "gulp-duration": "0.0.0",
+    "gulp-gh-pages": "^0.4.0",
     "gulp-notify": "^2.0.0",
     "gulp-react": "^2.0.0",
     "gulp-render": "0.1.1",
