--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "react-choice",
   "version": "0.1.0",
-  "description": "",
+  "description": "A React based customisable select box",
   "main": "dist/index.js",
   "author": "Jonathan Kim <jonathan.kim@onefinestay.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/onefinestay/react-choice"
+  },
+  "bugs": {
+    "url": "https://github.com/onefinestay/react-choice/issues"
+  },
   "license": "Apache 2.0",
   "dependencies": {
     "lodash": "^2.4.1",
