--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "devDependencies": {
     "brfs": "^1.2.0",
-    "browserify": "^6.2.0",
     "gulp": "^3.8.9",
     "gulp-connect": "^2.0.6",
     "gulp-duration": "0.0.0",
@@ -28,9 +27,11 @@
     "gulp-react": "^2.0.0",
     "gulp-render": "0.1.1",
     "gulp-sass": "^1.2.2",
+    "gulp-util": "^3.0.1",
     "gulp-watch": "^2.0.0",
+    "jsx-loader": "^0.12.2",
     "react-tools": "^0.12.0",
     "reactify": "^0.15.2",
-    "watchify": "^2.1.0"
+    "transform-loader": "^0.2.1"
   }
 }
