--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsx-loader": "^0.12.2",
     "react-tools": "^0.12.0",
     "reactify": "^0.15.2",
-    "transform-loader": "^0.2.1"
+    "transform-loader": "^0.2.1",
+    "webpack": "^1.4.13"
   }
 }
