--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "lodash": "^2.4.1",
     "react": "^0.12.0",
+    "react-lazy-render": "^0.1.2",
     "sifter": "^0.3.4"
   },
   "devDependencies": {
