--- a/.eslintrc
+++ b/.eslintrc
@@ -186,12 +186,15 @@
     "yoda": [2, "never"],
  
     // eslint-plugin-react rules
+    "react/jsx-boolean-value": [1, "always"],
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
+    "react/jsx-no-undef": 2,
     "react/no-did-mount-set-state": 1,
     "react/no-did-update-set-state": 1,
-    "react/no-multi-comp": 2,
-    "react/prop-types": 0,
+    "react/no-multi-comp": 1,
+    "react/no-unknown-property": 1,
+    "react/prop-types": 1,
     "react/react-in-jsx-scope": 2,
     "react/self-closing-comp": 1,
     "react/wrap-multilines": 2
