--- a/.eslintrc
+++ b/.eslintrc
@@ -50,7 +50,7 @@
     "no-div-regex": 0,
     "no-dupe-keys": 2,
     "no-dupe-args": 2,
-    "no-else-return": 0,
+    "no-else-return": 1,
     "no-empty": 2,
     "no-empty-class": 2,
     "no-empty-label": 2,
@@ -84,7 +84,7 @@
     "no-multiple-empty-lines": [0, {"max": 2}],
     "no-native-reassign": 2,
     "no-negated-in-lhs": 2,
-    "no-nested-ternary": 0,
+    "no-nested-ternary": 1,
     "no-new": 2,
     "no-new-func": 2,
     "no-new-object": 2,
@@ -117,7 +117,7 @@
     "no-throw-literal": 0,
     "no-undef": 2,
     "no-undef-init": 2,
-    "no-undefined": 1,
+    "no-undefined": 0,
     "no-underscore-dangle": 0,
     "no-unreachable": 2,
     "no-unused-expressions": 2,
@@ -134,12 +134,13 @@
     "camelcase": 2,
     "comma-spacing": 2,
     "comma-style": 0,
+    "comma-dangle": 0,
     "complexity": [0, 11],
     "consistent-return": 2,
     "consistent-this": [0, "that"],
     "curly": [2, "all"],
     "default-case": 0,
-    "dot-notation": [2, {"allowKeywords": true, "allowPattern": "^[a-zA-Z]+(_[a-zA-Z]+)+$"}],
+    "dot-notation": [2, { "allowKeywords": true, "allowPattern": "^[a-zA-Z/d]+(_[a-zA-Z/d]+)+$" }],
     "eol-last": 2,
     "eqeqeq": 2,
     "func-names": 0,
@@ -155,7 +156,7 @@
     "max-nested-callbacks": [0, 2],
     "max-params": [0, 3],
     "max-statements": [0, 10],
-    "new-cap": 2,
+    "new-cap": 0,
     "new-parens": 2,
     "one-var": 0,
     "operator-assignment": [0, "always"],
