--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "react": ">=0.12.0"
   },
   "dependencies": {
-    "lodash": "^2.4.1",
+    "classnames": "^2.1.1",
+    "lodash.find": "^3.2.0",
+    "lodash.map": "^3.1.2",
+    "lodash.pick": "^3.1.0",
+    "lodash.sortby": "^3.1.2",
+    "lodash.uniq": "^3.1.0",
     "sifter": "^0.4.1"
   },
   "devDependencies": {
