--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "classnames": "^2.1.1",
+    "lodash.filter": "^3.1.0",
     "lodash.find": "^3.2.0",
     "lodash.map": "^3.1.2",
     "lodash.sortby": "^3.1.2",
