Updated Option and replace custom highlighter with react highlighter

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash.find": "^3.2.0",
     "lodash.map": "^3.1.2",
     "lodash.sortby": "^3.1.2",
+    "react-highlighter": "^0.2.2",
     "sifter": "^0.4.1"
   },
   "devDependencies": {
