--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.1.1",
     "lodash.filter": "^3.1.0",
     "lodash.find": "^3.2.0",
+    "lodash.findindex": "^3.2.0",
     "lodash.map": "^3.1.2",
     "lodash.sortby": "^3.1.2",
     "react-highlighter": "^0.2.2",
