--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-choice",
-  "version": "0.4.2",
+  "version": "0.5.0-alpha",
   "description": "A React based customisable select box",
   "main": "dist/index.js",
   "author": "Jonathan Kim <jonathan.kim@onefinestay.com>",
