--- a/.eslintrc
+++ b/.eslintrc
@@ -52,7 +52,7 @@
     "no-dupe-args": 2,
     "no-else-return": 1,
     "no-empty": 2,
-    "no-empty-class": 2,
+    "no-empty-character-class": 2,
     "no-empty-label": 2,
     "no-eq-null": 0,
     "no-eval": 2,
@@ -62,7 +62,7 @@
     "no-extra-boolean-cast": 2,
     "no-extra-parens": 0,
     "no-extra-semi": 2,
-    "no-extra-strict": 2,
+    "strict": 2,
     "no-fallthrough": 2,
     "no-floating-decimal": 0,
     "no-func-assign": 2,
@@ -127,7 +127,6 @@
     "no-var": 0,
     "no-warning-comments": [0, { "terms": ["todo", "fixme", "xxx"], "location": "start" }],
     "no-with": 2,
-    "no-wrap-func": 2,
  
     "block-scoped-var": 0,
     "brace-style": [0, "1tbs"],
@@ -167,7 +166,7 @@
     "semi": 2,
     "semi-spacing": [2, {"before": false, "after": true}],
     "sort-vars": 0,
-    "space-after-function-name": [2, "never"],
+    "space-before-function-paren": [2, "never"],
     "space-after-keywords": [2, "always"],
     "space-before-blocks": [0, "always"],
     "space-before-function-parentheses": [0, "always"],
